# qtMultiMedia

./: .gitignore  Actions.qml  CMakeLists.txt  Contents.qml  Development_documentation.docx  Dialogs.qml  Footer.qml  TimeEdit.qml  Window.qml  appmultiMedia  image.qrc  main.cpp  mediadate.cpp  mediadate.h  mediapaly.cpp  mediapaly.h  multiMedia.js  videocutter.desktop  zimu.srt
